# stdext

./: CMakeLists.txt  README.md
include/: stdext.h
include/configure/: stdext_settings.h  stdext_settings.h.in  stdext_version.h  stdext_version.h.in
include/stdext/: catexit.h  cbasename.h  cdata.h  cgetchar.h  cmacros.h  cmalloc.h  cmath.h  cslprintf.h  csprintf_s.h  cstat.h  cstrcmpi.h  cstrto_s.h
src/stdext/: catexit.c  cbasename.c  cgetchar.c  cmalloc.c  cmath.c  cslprintf.c  csprintf_s.c  cstrto_s.c
